unpackaged/main/default/objects/Supplier__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <description>Processor/Packers Only; if they select other in the &#39;Supply&#39; field above</description>
    <inlineHelpText>If other is selected in for supply, please specify.</inlineHelpText>
    <label>Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>