unpackaged/main/default/objects/Supplier__c/fields/Supplier_Account__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Suppliers (Supplier Account)</relationshipLabel>
    <relationshipName>Suppliers1</relationshipName>
    <type>Lookup</type>
</CustomField>