unpackaged/main/default/objects/Supplier__c/fields/Supplier_Membership__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Membership__c</fullName>
    <description>The 8 digit RSPCA Assured membership number of the supplier.</description>
    <inlineHelpText>The 8 digit RSPCA Assured membership number of the supplier.</inlineHelpText>
    <label>Supplier Membership</label>
    <length>9</length>
    <type>Text</type>
</CustomField>