unpackaged/main/default/objects/Supplier__c/fields/Supplier_Type__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Type__c</fullName>
    <label>Supplier Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abattoir</fullName>
            </value>
            <value>
                <fullName>Hatchery</fullName>
            </value>
            <value>
                <fullName>Haulier</fullName>
            </value>
            <value>
                <fullName>Producer</fullName>
            </value>
            <value>
                <fullName>Processor/Packer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>