unpackaged/main/default/objects/Supplier__c/fields/Supply__c.field-meta.xml
<CustomField>
    <fullName>Supply__c</fullName>
    <label>Supply</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beef</fullName>
            </value>
            <value>
                <fullName>Chicken</fullName>
            </value>
            <value>
                <fullName>Dairy</fullName>
            </value>
            <value>
                <fullName>Duck</fullName>
            </value>
            <value>
                <fullName>Eggs</fullName>
            </value>
            <value>
                <fullName>Lamb</fullName>
            </value>
            <value>
                <fullName>Pork</fullName>
            </value>
            <value>
                <fullName>Salmon</fullName>
            </value>
            <value>
                <fullName>Trout</fullName>
            </value>
            <value>
                <fullName>Turkey</fullName>
            </value>
            <value>
                <fullName>Veal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>