unpackaged/main/default/objects/Supplier__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Suppliers</relationshipLabel>
    <relationshipName>Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>